# shrapnel-engine

./: CMakeLists.txt  README.md  SE.h  SE_Collection.c  SE_Collection.h  SE_Draw.c  SE_Draw.h  SE_Event.h  SE_Math.c  SE_Math.h  SE_Sound.c  SE_Sound.h  SE_Sound_Win32.c  SE_Stream.h  SE_Stream_Emscripten.c  SE_Stream_Win32.c  SE_Surface.c  SE_Surface.h  SE_Surface_Win32.c  SE_System.h
examples/: CMakeLists.txt  example.c  example_win32.c
